--- a/app/src/main/res/layout/activity_evaluation.xml
+++ b/app/src/main/res/layout/activity_evaluation.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_layout"
@@ -70,7 +71,8 @@
                     android:layout_weight="0.9"
                     android:text="그렇지 않다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -86,7 +88,8 @@
                     android:layout_weight="0.8"
                     android:text="보통이다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -102,7 +105,8 @@
                     android:layout_weight="0.8"
                     android:text="그렇다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -118,7 +122,8 @@
                     android:layout_weight="0.9"
                     android:text="매우 그렇다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -152,6 +157,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_no_02"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
+
                 <RadioButton
                     android:id="@+id/rd_02_01"
                     style="@style/Widget.AppCompat.CompoundButton.RadioButton"
@@ -160,7 +166,8 @@
                     android:layout_weight="1.2"
                     android:text="매우 그렇지 않다"
                     android:textSize="8sp"
-                    android:maxLines="2"  android:minWidth="0dp"
+                    android:maxLines="2"
+                    android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
                     android:paddingEnd="2dp"
@@ -175,7 +182,8 @@
                     android:layout_weight="0.9"
                     android:text="그렇지 않다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -191,7 +199,8 @@
                     android:layout_weight="0.8"
                     android:text="보통이다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -207,7 +216,8 @@
                     android:layout_weight="0.8"
                     android:text="그렇다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -223,7 +233,8 @@
                     android:layout_weight="0.9"
                     android:text="매우 그렇다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -265,7 +276,8 @@
                     android:layout_weight="1.2"
                     android:text="매우 그렇지 않다"
                     android:textSize="8sp"
-                    android:maxLines="2"  android:minWidth="0dp"
+                    android:maxLines="2"
+                    android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
                     android:paddingEnd="2dp"
@@ -280,7 +292,8 @@
                     android:layout_weight="0.9"
                     android:text="그렇지 않다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -296,7 +309,8 @@
                     android:layout_weight="0.8"
                     android:text="보통이다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -312,7 +326,8 @@
                     android:layout_weight="0.8"
                     android:text="그렇다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -328,7 +343,8 @@
                     android:layout_weight="0.9"
                     android:text="매우 그렇다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -370,7 +386,8 @@
                     android:layout_weight="1.2"
                     android:text="매우 그렇지 않다"
                     android:textSize="8sp"
-                    android:maxLines="2"  android:minWidth="0dp"
+                    android:maxLines="2"
+                    android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
                     android:paddingEnd="2dp"
@@ -385,7 +402,8 @@
                     android:layout_weight="0.9"
                     android:text="그렇지 않다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -401,7 +419,8 @@
                     android:layout_weight="0.8"
                     android:text="보통이다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -417,7 +436,8 @@
                     android:layout_weight="0.8"
                     android:text="그렇다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -433,7 +453,8 @@
                     android:layout_weight="0.9"
                     android:text="매우 그렇다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -475,7 +496,8 @@
                     android:layout_weight="1.2"
                     android:text="매우 그렇지 않다"
                     android:textSize="8sp"
-                    android:maxLines="2"  android:minWidth="0dp"
+                    android:maxLines="2"
+                    android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
                     android:paddingEnd="2dp"
@@ -490,7 +512,8 @@
                     android:layout_weight="0.9"
                     android:text="그렇지 않다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -506,7 +529,8 @@
                     android:layout_weight="0.8"
                     android:text="보통이다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -522,7 +546,8 @@
                     android:layout_weight="0.8"
                     android:text="그렇다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -538,7 +563,8 @@
                     android:layout_weight="0.9"
                     android:text="매우 그렇다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -580,7 +606,8 @@
                     android:layout_weight="1.2"
                     android:text="매우 그렇지 않다"
                     android:textSize="8sp"
-                    android:maxLines="2"  android:minWidth="0dp"
+                    android:maxLines="2"
+                    android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
                     android:paddingEnd="2dp"
@@ -595,7 +622,8 @@
                     android:layout_weight="0.9"
                     android:text="그렇지 않다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -611,7 +639,8 @@
                     android:layout_weight="0.8"
                     android:text="보통이다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -627,7 +656,8 @@
                     android:layout_weight="0.8"
                     android:text="그렇다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
@@ -643,7 +673,8 @@
                     android:layout_weight="0.9"
                     android:text="매우 그렇다"
                     android:textSize="8sp"
-                    android:singleLine="true"  android:ellipsize="end"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:paddingStart="2dp"
