--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,13 +23,13 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="30sp"
+            android:layout_marginTop="30dp"
             android:textStyle="bold"
             android:textColor="@color/black"
             android:text="니코틴 중독 검사"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintTop_toTopOf="parent">
         </TextView>
 
         <Button
